# kdf

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CTestConfig.cmake  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  disklist.cpp  disklist.h  disks.cpp  disks.h  kcmdf.cpp  kcmdf.desktop  kcmdf.h  kcmdf.kdelnk  kconftest.cpp  kdf.categories  kdf.cpp  kdf.desktop  kdf.h  kdf.kdelnk  kdfconfig.cpp  kdfconfig.h  kdfconfig.ui  kdfitemdelegate.cpp  kdfitemdelegate.h  kdfsortproxymodel.cpp  kdfsortproxymodel.h  kdfutil.h  kdfwidget.cpp  kdfwidget.h  kwikdisk.cpp  kwikdisk.desktop  kwikdisk.h  kwikdisk.kdelnk  listview.cpp  listview.h  (+9 more)
desktop/: CMakeLists.txt  kcmdf.desktop  kdfui.rc  org.kde.kdf.appdata.xml  org.kde.kdf.desktop  org.kde.kwikdisk.desktop
doc/: CMakeLists.txt  Makefile.in
doc/app/: CMakeLists.txt  index.docbook
doc/de/: Makefile.am  Makefile.in  index.html
doc/en/: Makefile.am  Makefile.in
doc/kcontrol/: CMakeLists.txt  index.docbook
doc/manual/: Makefile.am  index-1.html  index-2.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
pics/: CMakeLists.txt  Makefile.am  Makefile.in  kdf.xpm  mini-kwikdisk.xpm  mini-root.xpm
po/af/: kdf.po
po/ar/: kdf.po
po/ast/: kdf.po
po/be/: kdf.po
po/bg/: kdf.po
po/br/: kdf.po
po/bs/: kdf.po
po/ca/: kdf.po
po/ca/docs/kcontrol/blockdevices/: index.docbook
po/ca/docs/kdf/: index.docbook
po/ca@valencia/: kdf.po
po/cs/: kdf.po
po/cy/: kdf.po
po/da/: kdf.po
po/de/: kdf.po
po/de/docs/kcontrol/blockdevices/: index.docbook
po/de/docs/kdf/: index.docbook
po/el/: kdf.po
po/en_GB/: kdf.po
po/eo/: kdf.po
po/es/: kdf.po
po/es/docs/kcontrol/blockdevices/: index.docbook
po/es/docs/kdf/: index.docbook
po/et/: kdf.po
po/et/docs/kdf/: index.docbook
po/eu/: kdf.po
po/fa/: kdf.po
po/fi/: kdf.po
po/fr/: kdf.po
po/fr/docs/kcontrol/blockdevices/: index.docbook
po/fr/docs/kdf/: index.docbook
po/ga/: kdf.po
po/gl/: kdf.po
po/gl/docs/kdf/: index.docbook
po/he/: kdf.po
po/hi/: kdf.po
po/hne/: kdf.po
po/hr/: kdf.po
po/hu/: kdf.po
po/ia/: kdf.po
po/id/: kdf.po
po/is/: kdf.po
po/it/: kdf.po
po/it/docs/kcontrol/blockdevices/: index.docbook
po/it/docs/kdf/: index.docbook
po/ja/: kdf.po
po/ka/: kdf.po
po/kk/: kdf.po
po/km/: kdf.po
po/ko/: kdf.po
po/ko/docs/kcontrol/blockdevices/: index.docbook
po/lt/: kdf.po
po/lv/: kdf.po
po/mk/: kdf.po
po/mr/: kdf.po
po/ms/: kdf.po
po/nb/: kdf.po
po/nds/: kdf.po
po/ne/: kdf.po
po/nl/: kdf.po
po/nl/docs/kcontrol/blockdevices/: index.docbook
po/nl/docs/kdf/: index.docbook
po/nn/: kdf.po
po/oc/: kdf.po
po/pa/: kdf.po
po/pl/: kdf.po
po/pt/: kdf.po
po/pt/docs/kcontrol/blockdevices/: index.docbook
po/pt/docs/kdf/: index.docbook
po/pt_BR/: kdf.po
po/pt_BR/docs/kcontrol/blockdevices/: index.docbook
po/pt_BR/docs/kdf/: index.docbook
po/ro/: kdf.po
po/ru/: kdf.po
po/ru/docs/kcontrol/blockdevices/: index.docbook
po/ru/docs/kdf/: index.docbook
po/sa/: kdf.po
po/se/: kdf.po
po/sk/: kdf.po
po/sl/: kdf.po
po/sl/docs/kcontrol/blockdevices/: index.docbook
po/sl/docs/kdf/: index.docbook
po/sq/: kdf.po
po/sr/: kdf.po
po/sr/docs/kcontrol/blockdevices/: index.docbook
po/sr/docs/kdf/: index.docbook  l10n-track
po/sr@ijekavian/: kdf.po
po/sr@ijekavianlatin/: kdf.po
po/sr@latin/: kdf.po
po/sr@latin/docs/kcontrol/blockdevices/: index.docbook
po/sr@latin/docs/kdf/: index.docbook
po/sv/: kdf.po
po/sv/docs/kcontrol/blockdevices/: index.docbook
po/sv/docs/kdf/: index.docbook
po/ta/: kdf.po
po/tg/: kdf.po
po/th/: kdf.po
po/tr/: kdf.po
po/tr/docs/kcontrol/blockdevices/: index.docbook
po/tr/docs/kdf/: index.docbook
po/ug/: kdf.po
po/uk/: kdf.po
po/uk/docs/kcontrol/blockdevices/: index.docbook
po/uk/docs/kdf/: index.docbook
po/uz/: kdf.po
po/uz@cyrillic/: kdf.po
po/xh/: kdf.po
po/zh_CN/: kdf.po
po/zh_TW/: kdf.po
src/: CMakeLists.txt  disklist.cpp  disklist.h  disks.cpp  disks.h  kcm_kdf.json  kcmdf.cpp  kcmdf.h  kcmdf.json  kdf.cpp  kdf.h  kdf.qrc  kdfconfig.cpp  kdfconfig.h  kdfconfig.ui  kdfitemdelegate.cpp  kdfitemdelegate.h  kdfsortproxymodel.cpp  kdfsortproxymodel.h  kdfui.rc  kdfutil.h  kdfwidget.cpp  kdfwidget.h  kwikdisk.cpp  kwikdisk.h  mntconfig.cpp  mntconfig.h  mntconfig.ui  optiondialog.cpp  optiondialog.h  stdoption.cpp  stdoption.h
unix_outputs/: df-g.hpux  df-k.digital  df-k.hpux  df.man.hpux  etcfstab.digital  etcfstab.hpux  unix-defines.txt
